--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,26 @@
 [package]
 name = "session-service"
 authors = ["smokingplaya"]
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
 base64 = "0.22.1"
+hex = "0.4.3"
 lazy_static = "1.5.0"
 log = "0.4.22"
 mc-query = "2.0.0"
+md5 = "0.7.0"
 num-bigint = "0.4.6"
 once_cell = "1.20.2"
 openssl = "0.10.68"
+rand = "0.9.0"
 serde_json = "1.0.137"
 sha1 = "0.10.6"
+sha2 = "0.10.8"
+tower = "0.5.2"
+tower-http = { version = "0.6.2", features = ["trace"] }
 
 [dependencies.axum]
 version = "0.8.1"
@@ -26,7 +32,6 @@ features = ["json"]
 
 [dependencies.dixxxie]
 version = "0.1.15"
-git="https://github.com/riverfallmc/dixxxie"
 
 [dependencies.tokio]
 version = "1.42.0"
