--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "session-service"
 authors = ["smokingplaya"]
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 [dependencies]
+adjust = "0.1.24"
 anyhow = "1.0.95"
 base64 = "0.22.1"
 hex = "0.4.3"
@@ -29,9 +30,6 @@ features = ["multipart"]
 [dependencies.reqwest]
 version = "0.12.12"
 features = ["json"]
-
-[dependencies.dixxxie]
-version = "0.1.15"
 
 [dependencies.tokio]
 version = "1.42.0"
