--- a/puff.yml
+++ b/puff.yml
@@ -28,7 +28,7 @@ tasks:
   deploy:
     description: Builds a image, and push it to the registry
     commands:
-      - puff build && puff pushimage
+      - puff build && puff tagimage && puff pushimage
 
   pushimage:
     description: Pushes the image to the registry
